--- a/WebUsuario/css/index.css
+++ b/WebUsuario/css/index.css
@@ -318,7 +318,36 @@ div.search form, div.search form input{
 }
 /* Fin Section quejas */
 
-
+/* Section profile */
+.profile{
+    display: none;
+    padding: 1rem;
+}
+.profile ul li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+}
+.profile ul li figure{
+    
+    height: 150px;
+    width: 150px;
+    
+}
+.profile ul li input{
+    border: 1px solid #83ce89;
+    border-radius: 3px 3px 3px 3px;
+    width: 100%;
+    padding: 1rem 0;
+}
+.profile ul li:nth-child(4) input{
+    background-color: #b6f6bb;
+    color: darkgreen;
+    border: 1px solid #83ce89;
+    border-radius: 3px;
+}
+/* Fin Section profile */
 
 
 
