--- a/WebUsuario/css/index.css
+++ b/WebUsuario/css/index.css
@@ -93,7 +93,7 @@ div.search i{
 div.search form{
 	padding-left: 1rem;
 }
-div.search form, div.search form input{
+div.search input{
 	width: 100%;
 	height: 100%;
 	font-size: 1.3rem;
@@ -251,18 +251,22 @@ div.search form, div.search form input{
     border: 1px solid #83ce89;
     border-radius: 3px;
 }
-.register #errorSignIn{
+.register #errorSignIn, .register #registerEmail{
     display: none;
     justify-content:center;
     padding-top: 1rem;
 }
-.register #errorSignIn p{
+.register #errorSignIn p, .register #registerEmail p{
     padding: 1rem;
     border: 1px solid red;
     border-radius: 3px;
     background-color: #d9534f;
     color: white;
     margin: 0 1rem;
+}
+.register #registerEmail p{
+    border: 1px solid darkgreen;
+    background-color: #78c17d;
 }
 /* Fin Section login */
 
