--- a/WebUsuario/css/index.css
+++ b/WebUsuario/css/index.css
@@ -77,6 +77,9 @@ header div.menu ul li a{
 	display: block;
 	transition: 0.3s;
 }
+header div.menu ul li:nth-child(5), header div.menu ul li:nth-child(6){
+    display:none;
+}
 header #menuUser{
     display: none;
 }
